# ttt

Jira/: README.md  jira_comment.py
MCRdissector/: README.md  sn802.lua  sn802a.lua
SumoLogic/: README.md  headers.json  sumo_query.py
boson/python/: README.md
boson/python/monitor_prefs/: Connect_to_Boson.py  RA.py  RA4.py  RA5.py  RSOD.py  backendservercheck.py  empty_book.xlsx  fnd.py  fnd52317.py  input.py  (+4 more)
frpc/: .ops_creds.json  .pylintrc  .sumo_config.ini  MANIFEST.in  Makefile  README.md  ops_creds.example.json  setup.cfg  sumo_config.example.ini
frpc/frpc/: __init__.py  argparse_type.py  base_frpc.py  boson_interface.py  command.py  compute.py  executor.py  frpc_deploy.py  frpc_script.py  interface.py  rpc_interface.py  script_executor.py  targeting.py
frpc/frpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frpc/frpc/template/: __init__.py  boson_base.sh  boson_common.sh  boson_get_online.sh
frpc/frpc/template/scripts/: bammit_restart.sh  bamnet_start.sh  bamstat.sh  check_dsp_data.sh  check_network_connectivity.sh  clear_boson_queue.sh  fix_date_not_correct.sh  get_mac.sh  get_version.sh  lbts_cbq.sh  log_bamio_not_ready.sh  log_conn_issues.sh  nop.sh  reboot.sh  tunnel_start.sh  tunnel_stop.sh
frpc/frpc/template/sumoql/: bamio-not-ready.sumoql  connectivity-issues.sumoql  date-not-correct.sumoql
frpc/scripts/: install-conda.sh
server/dummy_device_serial_number/: dummy_serial_number_server.py  serial_number.db  show_serial_db.py  update_serial_db.py
server/dummy_device_software_streaming_server/: dummy_device_software_streaming_server.py
(+267 files in other folders)
