[metadata]
name = frpc
version = attr: frpc.VERSION
author = Sleep Number
description = Tools for command execution and maintenance of remote pumps
long_description = file: README.md

[options]
include_package_data = True
packages = find:
scripts =
    bin/frpc_script
    bin/frpc_deploy

install_requires =
    requests>=2.25,<3
    sumologic-sdk>=0.1,<1
    numpy>=1.20,<2
    boto3>=1.20.4

python_requires = ==3.7.*

[options.extras_require]
dev =
    pylint
    flake8
    pep257
    build
